repeat jwtRefresh